--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "memory-fs": "^0.5.0",
     "rimraf": "^4.4.1",
     "style-loader": "^3.3.2",
+    "svg-url-loader": "^8.0.0",
     "swc-loader": "^0.2.3",
+    "url-loader": "^4.1.1",
+    "vue": "^3.2.47",
+    "vue-loader": "^17.0.1",
+    "vue-style-loader": "^4.1.3",
     "webpack": "^5.77.0",
     "webpack-chain": "^6.5.1",
     "webpackbar": "^5.0.2",
