--- a/package.json
+++ b/package.json
@@ -1,37 +1,22 @@
 {
-  "name": "plugin-cli",
+  "name": "plugin-cli-monorepo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "jiti dev-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Vitaminaq/plugin-cli.git"
+  },
+  "author": "Vitaminaq",
   "license": "ISC",
-  "devDependencies": {
-    "@swc/core": "^1.3.44",
-    "@types/koa": "^2.13.6",
-    "@types/ws": "^8.5.4",
-    "c12": "^1.2.0",
-    "chalk": "^5.2.0",
-    "css-loader": "^6.7.3",
-    "esbuild": "^0.17.15",
-    "esbuild-loader": "^3.0.1",
-    "html-webpack-plugin": "^5.5.0",
-    "jiti": "^1.18.2",
-    "koa": "^2.14.1",
-    "memory-fs": "^0.5.0",
-    "rimraf": "^4.4.1",
-    "style-loader": "^3.3.2",
-    "svg-url-loader": "^8.0.0",
-    "swc-loader": "^0.2.3",
-    "url-loader": "^4.1.1",
-    "vue": "^3.2.47",
-    "vue-loader": "^17.0.1",
-    "vue-style-loader": "^4.1.3",
-    "webpack": "^5.77.0",
-    "webpack-chain": "^6.5.1",
-    "webpackbar": "^5.0.2",
-    "ws": "^8.13.0"
-  }
+  "bugs": {
+    "url": "https://github.com/Vitaminaq/plugin-cli/issues"
+  },
+  "homepage": "https://github.com/Vitaminaq/plugin-cli#readme",
+  "packageManager": "pnpm"
 }
