--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,6 +6,7 @@
     "plugin-cli": "bin/plugin-cli.js"
   },
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "jiti index.ts",
     "build": "tsup"
@@ -41,6 +42,7 @@
     "ws": "^8.13.0"
   },
   "dependencies": {
+    "@types/memory-fs": "^0.3.3",
     "hookable": "^5.5.3"
   }
 }
