--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pixso/plugin-cli-beta",
-  "version": "1.0.0",
+  "version": "1.0.14",
   "description": "plugin cli",
   "bin": {
     "plugin-cli": "bin/plugin-cli.js"
@@ -14,6 +14,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/memory-fs": "^0.3.3",
+    "@swc/core": "^1.3.44",
+    "@swc/helpers": "^0.5.0",
+    "@types/ws": "^8.5.4",
+    "tsup": "^6.7.0",
+    "vue": "^3.2.47",
+    "vue-loader": "^17.0.1",
+    "vue-style-loader": "^4.1.3"
+  },
+  "dependencies": {
+    "hookable": "^5.5.3",
     "@swc/core": "^1.3.44",
     "@swc/helpers": "^0.5.0",
     "@types/ws": "^8.5.4",
@@ -31,18 +42,10 @@
     "style-loader": "^3.3.2",
     "svg-url-loader": "^8.0.0",
     "swc-loader": "^0.2.3",
-    "tsup": "^6.7.0",
     "url-loader": "^4.1.1",
-    "vue": "^3.2.47",
-    "vue-loader": "^17.0.1",
-    "vue-style-loader": "^4.1.3",
     "webpack": "^5.77.0",
     "webpack-chain": "^6.5.1",
     "webpackbar": "^5.0.2",
     "ws": "^8.13.0"
-  },
-  "dependencies": {
-    "@types/memory-fs": "^0.3.3",
-    "hookable": "^5.5.3"
   }
 }
