--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pixso/plugin-cli-beta",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "plugin cli",
   "bin": {
     "plugin-cli": "bin/plugin-cli.js"
@@ -14,9 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/memory-fs": "^0.3.3",
     "@swc/core": "^1.3.44",
     "@swc/helpers": "^0.5.0",
+    "@types/memory-fs": "^0.3.3",
     "@types/ws": "^8.5.4",
     "tsup": "^6.7.0",
     "vue": "^3.2.47",
@@ -24,7 +24,6 @@
     "vue-style-loader": "^4.1.3"
   },
   "dependencies": {
-    "hookable": "^5.5.3",
     "@swc/core": "^1.3.44",
     "@swc/helpers": "^0.5.0",
     "@types/ws": "^8.5.4",
@@ -35,6 +34,7 @@
     "css-loader": "^6.7.3",
     "esbuild": "^0.17.15",
     "esbuild-loader": "^3.0.1",
+    "hookable": "^5.5.3",
     "html-webpack-plugin": "^5.5.0",
     "jiti": "^1.18.2",
     "memory-fs": "^0.5.0",
@@ -42,6 +42,7 @@
     "style-loader": "^3.3.2",
     "svg-url-loader": "^8.0.0",
     "swc-loader": "^0.2.3",
+    "terser-webpack-plugin": "^5.3.7",
     "url-loader": "^4.1.1",
     "webpack": "^5.77.0",
     "webpack-chain": "^6.5.1",
