--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,12 +16,22 @@
   "devDependencies": {
     "@swc/core": "^1.3.44",
     "@swc/helpers": "^0.5.0",
+    "@types/express": "^4.17.17",
+    "@types/express-ws": "^3.0.1",
+    "@types/ip": "^1.1.0",
     "@types/memory-fs": "^0.3.3",
+    "@types/webpack-hot-middleware": "^2.25.6",
     "@types/ws": "^8.5.4",
+    "express": "^4.18.2",
+    "express-ws": "^5.0.2",
+    "ip": "^1.1.8",
     "tsup": "^6.7.0",
+    "typescript": "^4.9.3",
     "vue": "^3.2.47",
     "vue-loader": "^17.0.1",
-    "vue-style-loader": "^4.1.3"
+    "vue-style-loader": "^4.1.3",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-hot-middleware": "^2.25.3"
   },
   "dependencies": {
     "@swc/core": "^1.3.44",
