--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pixso/plugin-cli-beta",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "plugin cli",
   "bin": {
     "plugin-cli": "bin/plugin-cli.js"
@@ -25,18 +25,17 @@
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "ip": "^1.1.8",
+    "svelte-loader": "^3.1.8",
     "tsup": "^6.7.0",
     "typescript": "^4.9.3",
     "vue": "^3.2.47",
     "vue-loader": "^17.0.1",
     "vue-style-loader": "^4.1.3",
     "webpack-dev-middleware": "^6.1.1",
-    "webpack-hot-middleware": "^2.25.3"
+    "webpack-hot-middleware": "^2.25.3",
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
-    "@swc/core": "^1.3.44",
-    "@swc/helpers": "^0.5.0",
-    "@types/ws": "^8.5.4",
     "c12": "^1.2.0",
     "cac": "^6.7.14",
     "chalk": "4.1.0",
@@ -56,6 +55,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.77.0",
     "webpack-chain": "^6.5.1",
+    "webpack-dev-middleware": "6.1.1",
+    "webpack-hot-middleware": "2.25.3",
     "webpackbar": "^5.0.2",
     "ws": "^8.13.0"
   }
